# cnext

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile copy  Dockerfile-conda  Dockerfile-poetry  Dockerfile.new  README.md  RELEASE.md  ReleaseNotes.md  bitbucket-pipelines.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  environment.yml  instruction.md  package-lock.json  package.json  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
Skywalker/: .gitignore
cnext_app/: .env  .env.development  .sentryclirc  Dockerfile  __init__.py  __main__.py  next.config.js  package-lock.json  package.json  sentry.client.config.js  sentry.server.config.js
cnext_server/: __init__.py  __main__.py  workspace.yaml
cnext_server/server/: Dockerfile  EventLog.js  eventLog.js  package-lock.json  package.json  pyproject.toml  server.js  server.yaml  settings.json  workspace.yaml
cnext_server/server/jupyter_server_manager/: jupyter_server.js
cnext_server/server/ls/: lsp_process.js
cnext_server/server/python/: server.py
cnext_server/server/python/code_editor/: code_editor.py  code_editor_basekernel.py
cnext_server/server/python/dataframe_manager/: dataframe.py  dataframe_manager.py
cnext_server/server/python/env_manager/: env_manager.py
cnext_server/server/python/environment_manager/: environment_manager.py
cnext_server/server/python/executor_manager/: executor_manager.py
cnext_server/server/python/file_explorer/: file_explorer.py
cnext_server/server/python/file_manager/: file_manager.py
cnext_server/server/python/git_manager/: git_manager.py
cnext_server/server/python/jupyter_server_manager/: jupyter_server_config.json  jupyter_server_manager.py
cnext_server/server/python/kernel_manager/: kernel_manager.py
cnext_server/server/python/libs/: constants.py  logs.py  message.py  message_handler.py  zmq_message.py
cnext_server/server/python/logs_manager/: logs_manager.py
cnext_server/server/python/model_manager/: model_manager.py
cnext_server/server/python/openai_manager/: openai_manager.py
cnext_server/server/python/project_manager/: files.py  interfaces.py  projects.py
cnext_server/server/python/user_space/: user_space.py
cnext_server/server/python/user_space/ipython/: constants.py  kernel.py
cnext_server/server/tests/test_servers/: package.json
cyc-next-app/: .dockerignore  .gitignore  Dockerfile  Dockerfile-cypress.dockerfile  README.md  (+6 more)
cyc_next_app/server/: .env  .server.yaml  Dockerfile  Pipfile  environment.yml  package.json  pyproject.toml  requirements.txt  server.js
cyc_next_app/server/Skywalker/: __init__.py  cleanlab.py  data_loader.py  main.py  model.py
cyc_next_app/server/Skywalker/data/housing_data/: data.csv  small-data.csv
cyc_next_app/server/Skywalker/data/machine-simulation/: 21549286_out.csv
cyc_next_app/server/ls/: lsp_process.js  streams.js
cyc_next_app/server/python/: server.py
cyc_next_app/server/python/cassist/: cassist.py
cyc_next_app/server/python/code_editor/: code_editor.py  code_editor_basekernel.py  interfaces.py
cyc_next_app/server/python/dataframe_manager/: dataframe_manager.py  dataframe_manager_basekernel.py
cyc_next_app/server/python/experiment_manager/: experiment_manager.py
cyc_next_app/server/python/file_explorer/: file_explorer.py
cyc_next_app/server/python/file_manager/: file_manager.py
cyc_next_app/server/python/kernel_manager/: kernel_manager.py
cyc_next_app/server/python/libs/: config.py  constants.py  message.py  message_handler.py  zmq_message.py
cyc_next_app/server/python/model_manager/: interfaces.py  model_manager.py
cyc_next_app/server/python/project_manager/: files.py  interfaces.py  projects.py
cyc_next_app/server/python/terminal/: terminal.py
cyc_next_app/server/python/user_space/: user_space.py
cyc_next_app/server/python/user_space/ipython/: constants.py  kernel.py
cyc_next_app/server/tests/: stack_trace.py  test_plotly.py
cyc_next_app/server/tests/test_servers/: server.py  test_pyshell.js
(+1570 files in other folders)
