[tool.poetry]
name = "cnext"
version = "0.4.17"
description = "The data-centric workspace for AI & DS"
authors = ["CycAI Inc"]
license = "MIT"

readme = "README.md"  # Markdown files are supported

homepage = "https://cyc-ai.com/"

packages = [
    { include = "cyc_next_app" },
]

exclude = [
    "cyc_next_app/tsconfig.json",
    "cyc_next_app/README.md",
    "cyc_next_app/Dockerfile",
    "cyc_next_app/Dockerfile-poetry",
    "cyc_next_app/.dockerignore",
    "cyc_next_app/server/Dockerfile",
    "cyc_next_app/server/Dockerfile-conda",
    "cyc_next_app/server/.dockerignore",
]

[tool.poetry.scripts]
cnext-init = "cyc_next_app.__main__:main"
cnext-path = "cyc_next_app.__main__:path"
cnext-run = "cyc_next_app.__main__:start"

[tool.poetry.dependencies]
python = ">=3.9"
plotly = "^5.7.0"
simplejson = "^3.17.6"
requests = "^2.27.1"
mlflow = "^1.25.1"
zmq = "^0.0.0"
send2trash = "^1.8.0"
jupyter-client = "^7.2.2"
jupyterlab = "^3.3.4"
matplotlib = "^3.5.1"
pandas = "1.3.5"
multipledispatch = "^0.6.0"
python-language-server = "^0.36.2"
cnextlib = "^0.2.0"
netron = "^5.7.8"
sentry-sdk = "^1.5.12"
protobuf = "3.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"